kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fiber-info
spec:
  selector:
    app: fiber-info
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
